# GalaxyBalaxyUpload

./: README.md  setup.cfg
.github/workflows/: python-publish.yml
GalaxyBalaxyUpload/: setup.py
GalaxyBalaxyUpload/GalaxyBalaxyUpload/: config.py  main.py
