[metadata]
name = GalaxyBalaxyUpload
description = My cobbled together with AI music data uploader. Does not upload files, just the tracks, and a spectrogram
long_description_content_type = text/markdown
url = https://github.com/GalaxyBalaxy/GalaxyBalaxyUpload
classifiers =
    Programming Language :: Python :: 3
    License :: GPL 3.0 
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.x

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    GBU = GalaxyBalaxyUpload.main:main:main
